db.properties file data omitted.
